Migrate from Commons Lang to native Java Platform functionality